# uymerge

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: HAZARDS.md  SPEC.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: merge.rs  reserialize.rs
oracle/: bench.sh  gen_diff3_cases.sh  git-e2e.sh  noop.sh
proptest-regressions/: codec.txt
src/: cli.rs  codec.rs  diff3.rs  lib.rs  main.rs  merge.rs  model.rs  verify.rs
tests/: cli.rs  diff3_parity.rs  goldens.rs
tests/fixtures/diff3/adjacent-edits/: expected.diff3  expected.merge  ours  theirs
tests/fixtures/diff3/conflict-head/: expected.diff3  expected.merge  theirs
tests/fixtures/golden/: empty-flow.asset.rewrap  mixed-terminators.asset.rewrap  prefab-multidoc.prefab.rewrap  scalar-astral-width.asset.rewrap  scalar-bare-seq-scalar.asset.rewrap  scalar-bare-seq-scalar.asset.unwrap  scalar-blank-line.asset.rewrap  scalar-blank-line.asset.unwrap  scalar-dash-key.asset.rewrap  scalar-double-space.asset.rewrap  scalar-dq-escaped-space.asset.rewrap  scalar-dq-escaped-space.asset.unwrap  scalar-dq-escapes.asset.rewrap  scalar-dq-escapes.asset.unwrap  scalar-escaped-quote.asset.rewrap  scalar-plain-folds.asset.rewrap  scalar-plain-folds.asset.unwrap  scalar-quoted-folds.asset.rewrap  scalar-quoted-folds.asset.unwrap
tests/fixtures/inputs/: crlf-table.asset  empty-flow.asset  scalar-astral-width.asset  scalar-dash-key.asset  scalar-double-space.asset  scalar-dq-escaped-space.asset  scalar-escaped-quote.asset  table-with-refs.asset
(+53 files in other folders)
